// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Optional Props 1`] = `
<div
  className="content"
>
  <p>
    The Answer is 42
  </p>
</div>
`;

exports[`Snapshot Testing Required Props 1`] = `
<div
  className="content"
/>
`;
